src/test/deca/syntax/valid/2_class.deca
// Description:
//    Programme qui cree deux classes 
//
// Resultats:
//   Aucune erreur
//

class A {
    void testA(){}
}

class B {
    void testB(){}
}



