src/test/deca/syntax/invalid/main_before_class.deca
//Programme invalide ou le main vient avant la declaration de classe

{

}

class B {
    void testB(){}
}